--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
 			var navsbr = document.querySelector('.navscrollbarrail');
 			// navsbb.style.marginLeft = navp.scrollLeft / (navp.scrollWidth - navp.clientWidth) * (navsbr.clientWidth - navsbb
 			// 	.clientWidth) + 'px';
-			var delax = navp.scrollLeft / (navp.scrollWidth - navp.clientWidth) * (navsbr.clientWidth - navsbb
+			var deltax = navp.scrollLeft / (navp.scrollWidth - navp.clientWidth) * (navsbr.clientWidth - navsbb
 				.clientWidth) + 'px';
-			navsbb.style.transform = 'translate(' + delax + ')';
+			navsbb.style.transform = 'translate(' + deltax + ')';
 		}
 	</script>
 </html>
